fixed an isssue where the colors representing past, present, and future were spilling out of the text area box

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,6 @@ textarea {
 
 .description {
   white-space: pre-wrap;
-  width: 100%;
 }
 
 .time-block {
@@ -59,16 +58,17 @@ textarea {
 }
 
 .saveBtn {
-  margin-top: 15px;
   border-left: 1px solid black;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
-  width: 10%;
-  margin-left: 500px;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+
 
